@@ -1,9 +1,9 @@
 1.1.5
 ~~~~~
 
-formula mode
+tooltips in RPN mode
 
-entry is no own mode but an addon for both modes?
+formula mode - entry is no own mode but an addon for both modes? YES
 
 stack clears on basic <-> scientific (good or bad?)
 
