@@ -4,7 +4,7 @@ Version: @VERSION@
 Release: 1
 Copyright: GPL
 Group: Application/Math
-Source: http://prdownloads.sourceforge.net/galculator/galculator-1.0.tar.gz?download
+Source: http://prdownloads.sourceforge.net/galculator/galculator-@VERSION@.tar.gz?download
 Packager: Victor Soroka <gbs@tnss.kharkov.ua>
 BuildRoot: /var/tmp/%{name}-%{version}-root
 BuildRequires: gtk2-devel >= 2.0.0 
@@ -36,8 +36,13 @@ rm -rf $RPM_BUILD_ROOT
 %doc %attr(0644, root, root) AUTHORS ChangeLog NEWS README COPYING TODO
 %{_bindir}/galculator
 %{_datadir}/applications/galculator.desktop
+%{_datadir}/galculator/glade/*.glade
+%{_datadir}/locale/*
 %{_mandir}/man1/%{name}.1*
 
 %changelog
+* Sat Nov 15 2003 Simon Floery <chimaira@users.sf.net>
+- applied patch by Filippo
+
 * Thu Oct 3 2002 Simon Floery <chimaira@users.sf.net>
 - description update
